# fold

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  codecov.yml  copyright.tmpl  example.py  index.html  mkdocs.yml  notebook.html  objects.inv  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: black.yaml  bump-version.yaml  ci-cd.yaml  docs.yaml  flake8.yaml  isort.yaml  publish.yaml  ruff.yaml  test-arch.yaml  test-lightgbm.yaml  test-neuralforecast.yaml  test-prophet.yaml  test-sktime.yaml  test-statsforecast.yaml  test-statsmodels.yaml  test-xgboost.yaml  tests.yaml
api/: index.html
api/composites/: index.html
api/loop/: index.html
api/models/: index.html
api/transformations/: index.html
concepts/adaptive-ml/: index.html
concepts/design/: index.html
concepts/forecasting-horizon/: index.html
concepts/models/: index.html
concepts/process/: index.html
concepts/speed/: index.html
concepts/splitters/: index.html
continuous-validation/: index.html
deployment/: index.html
design/: index.html
docs/: continuous-validation.md  cross-validation.md  deployment.md  design.md  examples.md  index.md  models.md  process.md  reference.md  results.csv  splitters.md  terminology.md  transformations.md
docs/api/: base.md  composites.md  loop.md  models.md  reference.md  transformations.md
docs/concepts/: adaptive-ml.md  continuous-validation.md  design.md  forecasting-horizon.md  models.md  models_explainer.md  speed.md  splitters.md
docs/design/: composite.md
docs/examples/: Article_Don't_use_a_single_train_test_split_with_Time_Series (1).ipynb  Benchmarking_SKtime_vs_fold.ipynb  Core_Walkthrough_Endogenous_and_Exogenous (1).ipynb  Core_Walkthrough_Endogenous_and_Exogenous.ipynb  _original.py  date.py  ensembling.py  preprocess.py  requirements.txt  scale.py  tabular.py  technical.md  transform-target.py  walkthrough.py
docs/examples/cookbook/: date.py  ensembling.py  transform-target.py
docs/examples/walkthroughs/: Core_Walkthrough.ipynb  benchmarking_sktime_fold.ipynb  benchmarking_sktime_fold.md  core_walkthrough.md  core_walkthrough.py  index.md
docs/product/: license.md  pricing.md  roadmap.md
docs/walkthroughs/: benchmarking_sktime_fold.ipynb  benchmarking_sktime_fold.md  core_walkthrough.ipynb  core_walkthrough.md
examples/: composite_airline.py  ensemble_vs_single.py  m4.py  sktime_airline.py  sktime_autoarima_airline.py  utils.py  weather.py
models/: index.html
process/: index.html
product/license/: index.html
product/pricing/: index.html
product/roadmap/: index.html
reference/: index.html
search/: search_index.json
speed/: index.html
splitters/: index.html
src/REPLACE_PACKAGE_NAME/: __init__.py
src/drift/: __init__.py  all_types.py  splitters.py
src/drift/loop/: __init__.py  backtest.py  common.py  convenience.py  fit_transformations.py  infer.py  inference.py  process.py  train.py  types.py
src/drift/models/: __init__.py  ar.py  base.py  baseline.py  dummy.py  ensemble.py  metalabeling.py  random.py  sklearn.py
src/drift/transformations/: __init__.py  base.py  breakpoint.py  columns.py  common.py  concat.py  ensemble.py  function.py  identity.py  no.py  pca.py  sampling.py  select.py  sequential.py  sklearn.py  target.py  test.py  univariate.py  update.py
src/drift/utils/: checks.py  list.py  pandas.py  splitters.py  tests.py
src/fold/: __init__.py  all_types.py  base.py  splitters.py  traverse.py
src/fold/base/: __init__.py  classes.py  events.py  scoring.py  utils.py
src/fold/composites/: __init__.py  base.py  cache.py  columns.py  common.py  concat.py  ensemble.py  hybrid.py  imbalance.py  metalabeling.py  metalabeling_strategy.py  optimize.py  percolumn.py  residual.py  sample.py  select.py  selectbest.py  skipna.py  target.py  utils.py
src/fold/events/: __init__.py  base.py  utils.py
src/fold/loop/: __init__.py  backtest.py  backtesting.py  checks.py  common.py  convenience.py  encase.py  global.py  infer.py  inference.py  memory.py  train.py  training.py  types.py  update.py  updateing.py  updating.py  utils.py  wrap.py
src/fold/models/: __init__.py  ar.py  arima.py  base.py  baseline.py  dummy.py  ensemble.py  garch.py  hybrid.py  metalabeling.py  random.py  select.py  sklearn.py
src/fold/transformations/: __init__.py  base.py  breakpoint.py  columns.py  common.py  concat.py  date.py  dev.py  difference.py  features.py  function.py  holidays.py  identity.py  lags.py  math.py  (+10 more)
terminology/: index.html
tests/: conftest.py  test_baseline_model.py  test_baselines.py  test_composites.py  test_deployment.py  test_docstrings.py  test_ensembles.py  test_hello_world.py  test_hybrid.py  test_inference.py  test_integration.py  test_loop.py  test_loop_train_methods.py  test_metalabelling.py  test_model.py  test_sampling.py  test_selectbest.py  test_selectmodel.py  test_sequential.py  test_skipna.py  test_sklearn.py  test_splitters.py  test_transform_target.py  test_transformation.py  test_transformations.py  test_utils.py  utils.py
tests/integration/: test_gridsearch.py  test_integration.py
tests/models/: test_ar.py  test_arima.py  test_baselines.py  test_garch.py  utils.py
tests/unit/: test_artifacts.py  test_cache.py  test_checks.py  test_composites.py  test_deployment.py  test_difference.py  test_ensembles.py  test_events.py  test_hpo.py  test_hybrid.py  test_loop.py  test_loop_train_methods.py  test_memory.py  test_model.py  test_optimizer.py  test_sampling.py  test_select.py  test_selectmodel.py  test_sklearn.py  test_splitters.py  test_transform_target.py  test_transformations.py  test_transformations_datetime.py  test_utils.py  test_weighing.py  tuneable.py
tests/wrappers/: test_arch.py  test_lightgbm.py  test_neuralforecast.py  test_prophet.py  test_sktime.py  test_statsforecast.py  test_statsmodels.py  test_xgboost.py
walkthroughs/benchmarking_sktime_fold/: index.html
walkthroughs/core_walkthrough/: index.html
(+93 files in other folders)
