[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "fold-core"
version = "0.0.5"
authors = [
  { name="Mark Aron Szulyovszky", email="mark@dreamfaster.ai" },
  { name="Daniel Szemerey", email="daniel@dreamfaster.ai" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "scikit-learn",
  "iteration_utilities",
]
description = "A Time Series Cross-Validation library that lets you build, deploy and update composite models easily. An order of magnitude speed-up, combined with flexibility and rigour."
keywords = []
license-files = { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Documentation = "https://dream-faster.github.io/fold"
Issues = "https://github.com/dream-faster/fold/issues"
Source = "https://github.com/dream-faster/fold"

[project.optional-dependencies]
quality = [
  "black~=22.12.0",
  "flake8~=4.0.1",
  "isort~=5.10.1",
  "pre-commit~=2.20.0",
]
tests = [
  "pytest~=7.1.2",
  "pytest-cov>=4.0",
  "imbalanced-learn",
  "holidays",
]
docs = [
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-include-markdown-plugin",
  "mkdocs-autorefs",
  "mkdocs-jupyter",
  "image",
  "mkdocs-gallery",
  "mkdocs-glightbox"
]
ray = ["ray"]
extras = [
  "ray",
  "holidays",
  "krisi~=0.0.8",
]

[tool.hatch.envs.quality]
dependencies = [
  ".[quality]"
]
detached = true

[tool.hatch.envs.quality.scripts]
check = [
  "flake8 src tests",
  "black --check --diff --preview src tests",
  "isort --check-only --diff src tests",
]
format = [
  "isort src tests",
  "black --preview src tests",
  "check",
]

[tool.hatch.envs.test]
dependencies = [".[tests]"]

[tool.hatch.envs.test.scripts]
run = "pytest tests/ --durations 0 -s"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.isort]
profile = "black"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/.devcontainer",
  "/.pre-commit-config.yaml",
  "/.gitignore",
  "/tests",
  "/.vscode",
  "mkdocs.yml",
  "codecov.yml",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
addopts = [
  "--doctest-modules",
  "--durations=0",
]

[tool.hatch.metadata]
allow-direct-references = true

# bumpver command: ``bumpver update --patch``
[tool.bumpver]
current_version = "0.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore(Release): Bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

[tool.hatch.version]
path = "src/fold/__init__.py"
