[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fold-core"
packages = [
    { include="fold", from="./src" },
]
version = "0.1.9"
authors = ["Mark Aron Szulyovszky", "Daniel Szemerey" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
description = "A Time Series Cross-Validation library that lets you build, deploy and update composite models easily. An order of magnitude speed-up, combined with flexibility and rigour."
keywords = ["time-series", "machine-learning", "forecasting", "forecast", "nowcast", "models", "time-series-regression", "time-series-classification", "financial-machine-learning"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">=1.2"
numpy = ">=1.16"
scikit-learn = ">=0.22"
tqdm = ">=4.0"
iteration_utilities = ">=0.11"
typing_extensions = ">=4.4.0"

black = {version = "~=22.12.0", optional = true}
flake8 = {version = "~=4.0.1", optional = true}
isort = {version = "~=5.10.1", optional = true}
pre-commit = {version = "~=2.20.0", optional = true}
pytest = {version = "~=7.1.2", optional = true}
pytest-cov = {version = ">=4.0", optional = true}
imbalanced-learn = {version = ">=0.7.0", optional = true}
holidays = {version = ">=0.10", optional = true}
krisi = {version = "~=1.0.1", optional = true}
mkdocs = {version = ">=1.2", optional = true}
mkdocs-material = {version = ">=9.0.0", optional = true}
mkdocstrings-python = {version = ">=0.9.0", optional = true}
mkdocs-include-markdown-plugin = {version = ">=4.0", optional = true}
mkdocs-autorefs = {version = ">=0.4", optional = true}
mkdocs-jupyter = {version = ">=0.22", optional = true}
image = {version = ">=1.5.33", optional = true}
mkdocs-gallery = {version = ">=0.7", optional = true}
mkdocs-glightbox = {version = "<=0.3.2", optional = true}
ray = {version = ">=1.4", optional = true}
fold-models = {version = "~=0.1.2", optional = true}
fold-wrappers = {version = "~=0.1", optional = true}
p_tqdm = {version = ">=1.3", optional = true}
statsmodels = {version = ">=0.12.1", optional = true}


[project.urls]
Documentation = "https://dream-faster.github.io/fold"
Issues = "https://github.com/dream-faster/fold/issues"
Source = "https://github.com/dream-faster/fold"

[tool.poetry.extras]
quality = [
  "black",
  "flake8",
  "isort",
  "pre-commit",
]
tests = [
  "pytest",
  "pytest-cov",
  "imbalanced-learn",
  "holidays",
  "statsmodels",
]
docs = [
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-include-markdown-plugin",
  "mkdocs-autorefs",
  "mkdocs-jupyter",
  "image",
  "mkdocs-gallery",
  "mkdocs-glightbox"
]
ray = ["ray"]
all = [
  "ray",
  "holidays",
  "krisi",
  "fold-core",
  "fold-wrappers",
  "p_tqdm",
  "statsmodels",
]


[tool.hatch.envs.quality]
dependencies = [
  ".[quality]"
]
detached = true

[tool.hatch.envs.quality.scripts]
check = [
  "flake8 src tests",
  "black --check --diff --preview src tests",
  "isort --check-only --diff src tests",
]
format = [
  "isort src tests",
  "black --preview src tests",
  "check"
]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
addopts = [
  "--doctest-modules",
  "--durations=0",
]

[tool.hatch.metadata]
allow-direct-references = true

# bumpver command: ``bumpver update --patch``
[tool.bumpver]
current_version = "0.1.9"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore(Release): Bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
